--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"homepage": "https://github.com/troyld-101/sugarbabys-childcare",
+	"author": "Troy Davis",
 	"dependencies": {
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/jest-dom": "^6.9.1",
