--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "sugarbabys-childcare",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://github.com/troyld-101/sugarbabys-childcare",
+	"homepage": "https://troyld-101.github.io/sugarbabys-childcare",
 	"author": "Troy Davis",
 	"dependencies": {
 		"@testing-library/dom": "^10.4.1",
